combine multiple reducers in one store

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redux Tutorial Series in Urdu/Hindi: Part 00</title>
     <style>
-        .completed{
+        .completed {
             text-decoration: line-through;
             font-weight: bold;
         }
-        .notcompleted{
+
+        .notcompleted {
             text-decoration: none;
             font-weight: normal;
         }
@@ -19,22 +20,23 @@
 </head>
 
 <body>
-    <!-- <h1 id="root"></h1>
-    <br/>
-    <input type="number" id ="num" value="1"/>
-    <br/>
+    <h2>Redux Counter APP</h2>
+    <h4 id="root"></h4>
+    <br />
+    <input type="number" id="num" value="1" />
+    <br />
 
     <button id="dec">-</button>
     <button id="reset">RESET</button>
     <button id="inc">+</button>
-    <script type="module" src="./app.js"></script> -->
-    <h1>Redux Todo App</h1>
+    <!-- <script type="module" src="./app.js"></script> -->
+    <h2>Redux Todo App</h2>
     <ol id="app">
         <li>There are no todo items....</li>
     </ol>
-    <input type="text" id = "todo" />
+    <input type="text" id="todo" />
     <button id="add_todo">ADD</button>
-    <script type="module" src="./todo.js"></script> 
+    <script type="module" src="./app.js"></script>
 </body>
 
 </html>
