--- a/index.html
+++ b/index.html
@@ -31,9 +31,16 @@
     <button id="inc">+</button>
     <!-- <script type="module" src="./app.js"></script> -->
     <h2>Redux Todo App</h2>
-    <ol id="app">
-        <li>There are no todo items....</li>
-    </ol>
+    <div style="display: flex; justify-content:space-around;">
+        <div>
+            <h4>Not Completed Tasks</h4>
+            <ol id="ncmp"></ol>
+        </div>
+        <div>
+            <h4>Completed Tasks</h4>
+            <ol id="cmp"></ol>
+        </div>
+    </div>
     <input type="text" id="todo" />
     <button id="add_todo">ADD</button>
     <script type="module" src="./app.js"></script>
